fix: always show y-axis page scrollbar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -53,6 +53,7 @@ div.main {
 body {
   font-family: PX-Times16, 'Times New Roman', serif !important;
   font-size: 16px !important;
+  overflow-y: scroll;
 
   h1 {
     font-family: PX-TimesBd32, 'Times New Romain', serif;
